# hair-code-save

./: .gitignore  README.md  complex_action_demo.py  manual_obstacle_avoidance.py  run_action.sh  run_skill_wave_return.sh  simple_action_demo.py  start_obstacle_avoidance.sh
Haier_robot_ws/: down_rgbd2_extrinsic.yaml  up_rgbd2_extrinsic.yaml
aidcode/: hello.py
demo_arm/: calibration.py  test.py  test1.py  test_change.py  wave_hand.py  wave_hand_safe.py  wave_hand_standalone.py
fw_upgrade/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  scp.sh  test.sh
fw_upgrade/include/: can_interface.h  can_interface_socketcan.h  crc.h  decryptfile.h  protocol.h
fw_upgrade/src/: can_interface_socketcan.cpp  crc.cpp  decryptfile.cpp  main.cpp  protocol.cpp
h01_following/: README.md  main.py  requirements.txt
human_detection/: AUDIO_WEB_UPDATE.md  CONFIG.md  FIXES_README.md  FIX_SUMMARY.md  GUI_README.md  NO_NEED_CONNECT.md  PALLAS_ISSUE.md  QUICKSTART.md  README.md  UPDATE_2026-03-31.md  UPDATE_LOG.md  USAGE.md  WAVE_ACTION_FIX.md  WAVE_ACTION_GUIDE.md  WAVE_HOME_FEATURE.md  check_config.py  config.json  diagnose_wave.py  main.py  requirements.txt  run_demo.py  start_gui.sh  start_with_arm.sh  test_arm.py  test_audio_web.py  test_camera.py  test_detection_only.py  test_detection_trigger.py  test_detection_wave.py  test_final.py  test_fixes.py  test_full_wave.py  test_ptz.py  test_quick.py  test_wave_complete.py  test_wave_integration.py  test_wave_real.py  test_yolo.py  web_gui.py
maps/: 1763358978137_back.yaml  1763520118418.pbstream  1763520118418.pgm  db.sqlite  (+4 more)
(+985 files in other folders)
